update resolver service

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 # Somnia RPC URL
 SOMNIA_RPC_URL=https://dream-rpc.somnia.network
-
+PORT=
 # Contract Addresses (from deployment)
 MARKET_CONTRACT=0xb87cC4B678a0864200dF40270402Ec03DF04711B
 SOMI_TOKEN=0x7E89Fc16F8dEB7c42484118d747719FDF496Eb00
