--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ethereum-attestation-service/eas-sdk": "^2.9.0",
     "@reown/appkit": "^1.8.13",
     "@reown/appkit-adapter-wagmi": "^1.8.13",
     "@somnia-chain/streams": "latest",
@@ -20,7 +21,7 @@
     "react-dom": "19.2.0",
     "recharts": "^2.12.0",
     "sonner": "^2.0.7",
-    "viem": "^2.38.6",
+    "viem": "2.37.8",
     "wagmi": "^2.19.2",
     "zustand": "^4.5.0"
   },
